--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ Ex3/plankton_siamese/models
 Ex3/plankton_siamese/__pycache__
 Ex3/plankton_siamese/ZooScanSet
 Ex3/plankton_siamese/testing_data
+Ex3/plankton_siamese/npy_files
+Ex3/plankton_siamese/checkpoints
 compare_generators_Ex1/TFrecords_generator/data
 compare_generators_Ex1/TFrecords_generator/split_resized_TFrecords_dataset
 *.log
